[gd_scene load_steps=3 format=2]

[ext_resource path="res://core/ui/inventory_screen/inventory_screen.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/main_theme.tres" type="Theme" id=2]

[node name="InventoryScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CategoryTabs" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.498
margin_bottom = 0.159973

[node name="Ships" type="Control" parent="CategoryTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ShipList" type="ItemList" parent="CategoryTabs/Ships"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Modules" type="Control" parent="CategoryTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ModuleList" type="ItemList" parent="CategoryTabs/Modules"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Commodities" type="Control" parent="CategoryTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="CommodityList" type="ItemList" parent="CategoryTabs/Commodities"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DetailsPanel" type="Panel" parent="."]
anchor_top = 0.511
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.119934

[node name="LabelName" type="Label" parent="DetailsPanel"]
margin_left = 96.0
margin_top = 32.0
margin_right = 785.0
margin_bottom = 88.0
theme = ExtResource( 2 )
text = "NAME"

[node name="LabelStat1" type="Label" parent="DetailsPanel"]
margin_left = 96.0
margin_top = 111.0
margin_right = 785.0
margin_bottom = 181.0
theme = ExtResource( 2 )
text = "STAT 1"

[node name="LabelStat2" type="Label" parent="DetailsPanel"]
margin_left = 96.0
margin_top = 188.0
margin_right = 785.0
margin_bottom = 258.0
theme = ExtResource( 2 )
text = "STAT 2"

[node name="LabelStat3" type="Label" parent="DetailsPanel"]
margin_left = 96.0
margin_top = 272.0
margin_right = 785.0
margin_bottom = 345.0
theme = ExtResource( 2 )
text = "STAT 3"

[node name="LabelDescription" type="Label" parent="DetailsPanel"]
margin_left = 880.0
margin_top = 32.0
margin_right = 1569.0
margin_bottom = 484.0
theme = ExtResource( 2 )
text = "DESCRIPTION"

[node name="ButtonClose" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -256.0
margin_top = -118.0
margin_right = -101.0
margin_bottom = -62.0
text = "CLOSE"

[connection signal="pressed" from="ButtonClose" to="." method="_on_ButtonClose_pressed"]
